trying to fix layout shifts

--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -26,7 +26,6 @@ body {
   color: var(--text-color);
   line-height: 1.6;
   padding: 1rem;
-  max-width: 900px;
   margin: 0 auto;
 }
 
@@ -39,6 +38,7 @@ header {
   padding: 10px;
   background-color: var(--header-footer-bg);
   border: 1px solid var(--color-border);
+  width: 100%;
 }
 
 #heading {
@@ -297,6 +297,7 @@ footer {
     justify-content: space-between;
     text-align: center;
     padding:5px;
+    width: 100%;
 }
 
 footer p, footer a, footer h3{
